--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="image-title p-5">
         <div data-aos="fade-right" data-aos-duration="2000">
           <div class="mt-5">
-            <p class="display-5 font-bold title-main">Maquinaria innovadora </p>
+            <p class="display-5 font-bold title-main">Maquinaria innovadora X</p>
             <p class="display-5 font-bold title-main" style="margin-top:-30px">para un futuro productivo</p>
           </div>
           <div class="d-flex">
