--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
          
           <div class="d-flex w-100">
             <div class="me-auto ms-3 d-flex">
-              <img src="images/logo_blanco.png" height="40" width="40">
-              <div class="d-flex"><p style="color: white;" class="my-auto ms-2">INCCA GROUP</p></div>
+              <img src="images/logo_blanco.png" height="40" width="40" class="image-logo-title">
+              <div class="d-flex"><p style="color: white;" class="my-auto ms-2 nombre-empresa-title">INCCA GROUP</p></div>
             </div>
 
             <div class="d-flex ms-auto">
@@ -42,7 +42,7 @@
       <div class="image-title p-5">
         <div data-aos="fade-right" data-aos-duration="2000">
           <div class="mt-5">
-            <p class="display-5 font-bold title-main">Maquinaria innovadora X</p>
+            <p class="display-5 font-bold title-main">Maquinaria innovadora</p>
             <p class="display-5 font-bold title-main" style="margin-top:-30px">para un futuro productivo</p>
           </div>
           <div class="d-flex">
